@@ -2,6 +2,10 @@
 Changes with Apache 2.3.0
   [Remove entries to the current 2.0 and 2.2 section below, when backported]
 
+  *) mod_ldap: Fix the search limit parameter to ldap_search_ext_s()
+     for SDKs that define LDAP_NO_LIMIT to something other than -1.
+     [David Jones <oscaremma gmail.com>]
+
   *) mod_cache: Use the same cache key throughout the whole request processing
      to handle escaped URLs correctly.  PR 41475. [Ruediger Pluem]
 
